Complete Employees Management Frontend with comprehensive templates and functionality

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -20,6 +20,7 @@
             <li class="nav-item"><a class="nav-link" href="/payments/">Payments</a></li>
             <li class="nav-item"><a class="nav-link" href="/customers/">Customers</a></li>
             <li class="nav-item"><a class="nav-link" href="/products/">Products</a></li>
+            <li class="nav-item"><a class="nav-link" href="/employees/">Employees</a></li>
             <li class="nav-item"><a class="nav-link" href="/admin/">Admin</a></li>
           </ul>
         </div>
